# CppDupeFileFinder

./: .gitignore  CMakeLists.txt  Readme.md  b  make-zip
include/: DuplicateFinder.h  FileUtils.h  ProgressBar.h
src/: DuplicateFinder.cpp  FileUtils.cpp  ProgressBar.cpp  main.cpp
tests/: test_DuplicateFinder.cpp
